src/styles/components/_navbar.scss
.main-nav {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  gap: 3rem;
  position: absolute;
  top: 0;
  right: -99999px;
  width: 0;
  height: 0;
  transition: $transition-all;
  padding-right: 2rem;

  @media (min-width: $breakpoint-lg) {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-self: center;
    gap: 0;
    position: relative;
    width: 100%;
    right: unset;
    height: auto;
    background: transparent;
    padding-right: unset;
  }

  .header-logo {
    display: block;

    @media (min-width: $breakpoint-lg) {
      display: block !important;
    }

    h3 {
      color: $white;
    }
  }

  ul {
    display: flex;
    flex-direction: column;

    @media (min-width: $breakpoint-lg) {
      display: inline-flex;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
    }

    li {
      margin: 0 0 12px;
      padding-right: 0;
      text-align: right;

      @media (min-width: $breakpoint-lg) {
        margin: 0;
      }
    }

    li a {
      font-size: 1.125rem;
      font-family: $heading-font;
      font-weight: 800;
      padding: 0;
      background: transparent;
      transition: all 0.3s ease-in-out;
      color: $white;
      text-transform: uppercase;

      @media (min-width: $breakpoint-lg) {
        padding: 12px 16px 8px;
      }
    }

    li a:hover {
      color: $secondary-accent !important;
    }

    li:last-of-type {
      margin-right: 0;
    }
  }

  .social-links {
    a svg {
      color: $white;
    }
    a:hover {
      svg {
        fill: $secondary-accent !important;
      }
    }
  }

  .navClose {
    display: none;
    position: absolute;
    top: 18px;
    right: 22px;

    @media (min-width: $breakpoint-lg) {
      display: none;
    }

    svg {
      width: 30px;
      height: auto;
      color: $colour-dark-blue;
    }
  }
}

.hamburger {
  display: block;
  text-align: right;
  z-index: 1000;
  cursor: pointer;

  @media (min-width: $breakpoint-lg) {
    display: none;
  }

  svg {
    width: 24px;
    height: auto;
    color: $white;
  }
}

// Mobile Nav Open
.header-content:has(.main-nav.active) {
  .hamburger {
    display: none;
    svg {
      fill: $colour-dark-blue;
    }
  }
}

.main-nav.active {
  display: flex;
  top: 0;
  right: 0;
  width: 80%;
  max-width: 375px;
  height: 100vh;
  background: rgba(255, 255, 255, 1);
  backdrop-filter: blur(5px);
  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
  border-radius: $border-radius-sm 0 0 $border-radius-sm;
  transition: $transition-all !important;
  overflow: hidden;

  @media (min-width: $breakpoint-lg) {
    height: auto;
    background: none;
    backdrop-filter: none;
    border: none;
    border-radius: 0;
    top: unset;
    right: unset;
    position: relative;
  }

  .navClose {
    display: block;
  }

  h3 {
    color: $colour-dark-blue;
    text-align: right;
    line-height: 1.3;
  }

  ul {
    position: relative;

    &:after {
      content: '';
      position: absolute;
      bottom: -300%;
      right: -300%;
      width: 800px;
      height: 800px;
      background: url('/ALDC-Logo-Dark.svg');
      background-repeat: no-repeat;
      background-size: 100% 100%;
      transform: rotate(-15deg);
      opacity: 0.2;

      @media (min-width: $breakpoint-md) {
        width: 1000px;
        height: 1000px;
        bottom: -400%;
        right: -400%;
      }
    }
  }

  ul li a {
    color: $colour-dark-blue;
    text-align: right;
  }

  .social-links {
    position: relative;
    a svg {
      fill: $colour-dark-blue;
    }
  }
}

.main-nav.false {
  transition: $transition-all !important;
}

